<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_status"
            android:title="@string/nav_status" />
        <item
            android:id="@+id/nav_periodo"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_periodo" />
        <item
            android:id="@+id/nav_dados"
            android:icon="@drawable/ic_data_lens"
            android:title="@string/nav_dados" />
        <item
            android:id="@+id/nav_notificacao"
            android:icon="@drawable/ic_clock"
            android:title="@string/nav_notificacao" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_historico" />
        <item
            android:id="@+id/nav_compra"
            android:icon="@drawable/ic_shop"
            android:title="@string/nav_compra" />
    </group>

</menu>
