<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewLens"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbxWearRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/str_in_use"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:id="@+id/tvRightEyeSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dateRightEye"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnDateRight"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnDatePicker"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lblMonths"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />

        <NumberPicker
            android:id="@+id/numberPickerRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:theme="@android:style/Theme.Light"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:id="@+id/spinnerRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/cbxCountUnitRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/str_count_unit"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>