<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewRating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/id_layout_Lens_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_brand"
            android:textColor="@color/color_selector" />

        <AutoCompleteTextView
            android:id="@+id/editTextRightBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:completionThreshold="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_desc_lens"
            android:textColor="@color/color_selector" />

        <EditText
            android:id="@+id/EditTextDescRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:textColor="@color/color_selector" />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_type_lens"
            android:textColor="@color/color_selector" />

        <Spinner
            android:id="@+id/spinnerTypeLensRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_power"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_power"
                    android:textColor="@color/color_selector" />

                <Spinner
                    android:id="@+id/spinnerPowerRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_add"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_add"
                    android:textColor="@color/color_selector" />

                <Spinner
                    android:id="@+id/spinnerAddRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_cylinder"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_cylinder"
                    android:textColor="@color/color_selector" />

                <Spinner
                    android:id="@+id/spinnerCylinderRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_axis"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_axis"
                    android:textColor="@color/color_selector" />

                <Spinner
                    android:id="@+id/spinnerAxisRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_bc"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_bc"
                    android:textColor="@color/color_selector" />

                <EditText
                    android:id="@+id/editTextBCRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_selector" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_dia"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_dia"
                    android:textColor="@color/color_selector" />

                <EditText
                    android:id="@+id/editTextDiaRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_selector" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_buy_site"
            android:textColor="@color/color_selector" />

        <EditText
            android:id="@+id/EditTextBuySiteRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textUri"
            android:textColor="@color/color_selector" />
    </LinearLayout>

</ScrollView>