<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewLens"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_blue"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="0.20"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="5dp">

            <CheckBox
                android:id="@+id/cbRemindEveryDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/str_remind_every_day" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1dp"
            android:layout_weight="0.40"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/str_set_time_alarm"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnTimePickerAlarm"
                    android:layout_width="219dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#7dd0ed"
                    android:gravity="center"
                    android:text="@string/btn_horario"
                    android:textColor="@android:color/white"
                    android:textSize="45sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1dp"
            android:layout_weight="0.40"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/str_days_before"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/numberPickerDaysBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:theme="@android:style/Theme.Light"></NumberPicker>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>